--- a/package.json
+++ b/package.json
@@ -5,11 +5,11 @@
   "main": "app.js",
   "dependencies": {
     "async": "~0.2.10",
-    "bcrypt": "~0.7.8",
-    "connect-mongo": "~0.3.3",
-    "crypto": "~0.0.3",
+    "bcrypt": "^0.7.8",
     "body-parser": "^1.17.1",
     "bower": "^1.8.0",
+    "connect-mongo": "~0.3.3",
+    "crypto": "~0.0.3",
     "express": "^4.15.2",
     "jade": "^1.11.0",
     "jstransformer-markdown": "^1.1.1",
