--- a/webpack-demo/package.json
+++ b/webpack-demo/package.json
@@ -24,6 +24,9 @@
     "less-loader": "^6.2.0",
     "style-loader": "^1.2.1"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "webpack": "^4.44.0",
+    "webpack-cli": "^3.3.12"
+  },
   "description": ""
 }
