--- a/webpack-demo/package.json
+++ b/webpack-demo/package.json
@@ -21,6 +21,7 @@
   "homepage": "https://github.com/grain0217/note#readme",
   "dependencies": {
     "css-loader": "^4.0.0",
+    "less": "^3.12.2",
     "less-loader": "^6.2.0",
     "style-loader": "^1.2.1"
   },
