--- a/webpack-demo/debug/package.json
+++ b/webpack-demo/debug/package.json
@@ -9,6 +9,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@babel/core": "^7.11.1",
+    "babel-loader": "^8.1.0",
     "object.is": "^1.0.0"
   },
   "devDependencies": {
